add jwt to schemas, req body do signup
