# server/swagger-output.json
@@ -2,10 +2,10 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
-    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
+    "title": "Wallet App REST API",
+    "description": "Express App to manage users and transactions in db"
   },
-  "host": "localhost:3000",
+  "host": "https://wallet-lpqy.onrender.com",
   "basePath": "/",
   "tags": [
     {
@@ -17,14 +17,6 @@
     "http",
     "https"
   ],
-  "securityDefinitions": {
-    "apiKeyAuth": {
-      "type": "jwtToken",
-      "in": "header",
-      "name": "Authorization",
-      "description": "auth bearer token"
-    }
-  },
   "consumes": [
     "application/json"
   ],
@@ -140,6 +132,132 @@
             "description": ""
           }
         }
+      },
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/{category}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "category",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/statistics/{year}/{month}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "year",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "month",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
       }
     }
   },
@@ -154,6 +272,19 @@
         "properties": {
           "type": "object",
           "properties": {
+            "_id": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Backend-generated unique identifier"
+                }
+              }
+            },
             "email": {
               "type": "object",
               "properties": {
@@ -161,9 +292,9 @@
                   "type": "string",
                   "example": "string"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "exampleemail@exampleemail.com"
+                  "example": "Email"
                 }
               }
             },
@@ -174,9 +305,9 @@
                   "type": "string",
                   "example": "string"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "try67hgj"
+                  "example": "Password"
                 }
               }
             },
@@ -187,18 +318,28 @@
                   "type": "string",
                   "example": "string"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "John Doe"
+                  "example": "User name"
                 }
               }
             }
-          },
-          "required": [
+          }
+        },
+        "required": {
+          "type": "array",
+          "example": [
             "email",
             "password",
             "firstName"
-          ]
+          ],
+          "items": {
+            "type": "string"
+          }
+        },
+        "example": {
+          "type": "string",
+          "example": "{ _id: '3245345436354423', email: 'examplel@email.com', password: 'try67hgj', firstName: 'John Doe' }"
         }
       }
     },
@@ -219,9 +360,9 @@
                   "type": "string",
                   "example": "string"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "2023:07:12"
+                  "example": "Transaction's date"
                 }
               }
             },
@@ -232,9 +373,9 @@
                   "type": "string",
                   "example": "string"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "2023"
+                  "example": "Year that transaction was made"
                 }
               }
             },
@@ -245,9 +386,9 @@
                   "type": "string",
                   "example": "string"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "July"
+                  "example": "Month that transaction was made"
                 }
               }
             },
@@ -258,9 +399,9 @@
                   "type": "string",
                   "example": "string"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "Income"
+                  "example": "Transaction type"
                 }
               }
             },
@@ -271,9 +412,9 @@
                   "type": "string",
                   "example": "string"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "Products"
+                  "example": "Transaction category"
                 }
               }
             },
@@ -284,9 +425,9 @@
                   "type": "string",
                   "example": "string"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "Grocery"
+                  "example": "User's description of transaction"
                 }
               }
             },
@@ -297,16 +438,44 @@
                   "type": "string",
                   "example": "number"
                 },
-                "example": {
+                "description": {
                   "type": "string",
-                  "example": "27"
+                  "example": "Sum"
                 }
               }
             },
             "owner": {
-              "$ref": "#/definitions/User"
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "User's id from database"
+                }
+              }
             }
           }
+        },
+        "required": {
+          "type": "array",
+          "example": [
+            "date",
+            "year",
+            "month",
+            "type",
+            "category",
+            "sum"
+          ],
+          "items": {
+            "type": "string"
+          }
+        },
+        "example": {
+          "type": "string",
+          "example": "{ date: '2023:07:12', year: '2023', month: 'July', type: 'Expense', category: 'Products', comment: 'Grocery', sum: 27, owner: '3245345436354423' }"
         }
       }
     }
