# server/swagger.js
@@ -9,6 +9,16 @@ const options = {
       description:
         'API documentation for Express application to manage users and transactions in database',
     },
+    components: {
+      securitySchemes: {
+        JWTAuth: {
+          type: 'apiKey',
+          in: 'header',
+          name: 'Authorization',
+          description: 'JWT authorization header using the Bearer scheme',
+        },
+      },
+    },
   },
   apis: [
     './routers/*.router.js',
@@ -25,10 +35,10 @@ import swaggerAutogen from 'swagger-autogen';
 const doc = {
   info: {
     version: '1.0.0',
-    title: 'My API',
-    description: 'Documentation automatically generated by the <b>swagger-autogen</b> module.',
+    title: 'Wallet App REST API',
+    description: 'Express App to manage users and transactions in db',
   },
-  host: 'localhost:3000',
+  host: 'https://wallet-lpqy.onrender.com',
   basePath: '/',
   schemes: ['http', 'https'],
   consumes: ['application/json'],
@@ -39,74 +49,74 @@ const doc = {
       description: 'Endpoints',
     },
   ],
-  securityDefinitions: {
-    apiKeyAuth: {
-      type: 'jwtToken',
-      in: 'header', // can be "header", "query" or "cookie"
-      name: 'Authorization', // name of the header, query parameter or cookie
-      description: 'auth bearer token',
-    },
-  },
   definitions: {
     User: {
       type: 'object',
       properties: {
-        $email: {
+        _id: {
           type: 'string',
-          example: 'exampleemail@exampleemail.com',
+          description: 'Backend-generated unique identifier',
         },
-        $password: {
+        email: {
           type: 'string',
-          example: 'try67hgj',
+          description: 'Email',
         },
-        $firstName: {
+        password: {
           type: 'string',
-          example: 'John Doe',
+          description: 'Password',
+        },
+        firstName: {
+          type: 'string',
+          description: 'User name',
         },
       },
+      required: ['email', 'password', 'firstName'],
+      example: `{ _id: '3245345436354423', email: 'examplel@email.com', password: 'try67hgj', firstName: 'John Doe' }`,
     },
     Transaction: {
       type: 'object',
       properties: {
         date: {
           type: 'string',
-          example: '2023:07:12',
+          description: `Transaction's date`,
         },
         year: {
           type: 'string',
-          example: '2023',
+          description: `Year that transaction was made`,
         },
         month: {
           type: 'string',
-          example: 'July',
+          description: `Month that transaction was made`,
         },
         type: {
           type: 'string',
-          example: 'Income',
+          description: `Transaction type`,
         },
         category: {
           type: 'string',
-          example: 'Products',
+          description: `Transaction category`,
         },
         comment: {
           type: 'string',
-          example: 'Grocery',
+          description: `User's description of transaction`,
         },
         sum: {
           type: 'number',
-          example: '27',
+          description: `Sum`,
         },
         owner: {
           type: 'string',
-          $ref: '#/definitions/User',
+          description: `User's id from database`,
         },
       },
+      required: ['date', 'year', 'month', 'type', 'category', 'sum'],
+      example: `{ date: '2023:07:12', year: '2023', month: 'July', type: 'Expense', category: 'Products', comment: 'Grocery', sum: 27, owner: '3245345436354423' }`,
     },
   },
 };
 
 const outputFile = './swagger-output.json';
-const endpointsFiles = ['./routers/users.router.js', './routers/users.router.js'];
+const endpointsFiles = ['./routers/users.router.js', './routers/transactions.router.js'];
 
 swaggerAutogen(outputFile, endpointsFiles, doc).then(() => {
   './server'; // Your project's root file
